Bug 343296: Spell-checker requires text cursor to be in word to get context menu, patch by smorgan <stuart.morgan@alumni.case.edu>, r=murph, sr=pink